2006-09-27  Claes Nästén  <me{@}pekdon{.}net>

	* src/PWinObj.hh (class PWinObj): 
	Added a map of Window to PWinObj for faster lookup.

	* src/Workspaces.cc (Workspaces::updateClientStackingList): 
	Updated to not create the list twice (one list and one array).

	* src/Client.cc (Client::readEwmhHints): 
	Added skipping of menus and focus toggling for docks.

2006-09-21  Claes Nästén  <me{@}pekdon{.}net>

	* src/PixmapHandler.cc (PixmapHandler::returnPixmap): 
	Use map for pixmap handler instead of list.

2006-09-11  Claes Nästén  <me{@}pekdon{.}net>

	* src/ActionHandler.cc (ActionHandler::findClientFromTitle): 
	Updated FindClient action to match against the visible title and not
	the Client set one.

	* src/RegexString.cc (RegexString::parse_match): 
	Updated parse match to support parsing of // style regular expressions
	having flags set. Currently only i flag supported. This type of
	expressions is currently only possible on the FindClient action.
	
	
2006-09-07  Claes Nästén  <me{@}pekdon{.}net>

	* src/Config.cc (Config::parseAction): 
	Updated ShowCmdDialog action to support parameter setting initial
	value. Useful together with action such as GotoClientID binding
	a keybinding to ShowCmdDialog GotoClientID for quick navigation.

	* src/ActionHandler.cc (ActionHandler::actionGotoClientID): 	
	Added GotoClientID action which goes to and focuses client with
	ID.

	* src/PDecor.cc: 
	Added boolean option ShowClientID under the Screen section of the
	main config file. This enable/disable display of Client ID in
	titles. 

2006-09-06  Claes Nästén  <me{@}pekdon{.}net>

	* src/Client.cc (Client::Client):
	Moved the Client list to Client. Added clientid list to Client so that
	it is possible to keep track of Client ids, preparation of number
	based navigation.

	* src/PDecor.hh (PDecor::TitleItem): 
	Extend PDecor::TitleItem with information to include client id.

	* src/Frame.cc (Frame::Frame): 
	Moved the Frame list to Frame.
